# semt_py

./: .gitignore  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.md
api/: index.html
docs/: api.md  contributing.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/modules/: auth_manager.md  dataset_manager.md  extension_manager.md  modification_manager.md  reconciliation_manager.md  table_manager.md  utils.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
modules/auth_manager/: index.html
modules/extension_manager/: index.html
modules/modification_manager/: index.html
modules/reconciliation_manager/: index.html
modules/table_manager/: index.html
modules/utils/: index.html
semt_py/: Auth_manager.py  __init__.py  dataset_manager.py  extension_manager.py  modification_manager.py  reconciliation_manager.py  table_manager.py  utils.py
site/: 404.html
site/contributing/: index.html
site/modules/dataset_manager/: index.html
site/modules/modification_manager/: index.html
